app/src/main/java/com/example/darkfox/trainingnotes/models/errors/FirebaseLoginException.kt
package com.example.darkfox.trainingnotes.models.errors

class FirebaseLoginException(val failCause:String = "") : Exception(failCause)